Enable translation on Slide paragraph fields.

--- a/config/sync/field.field.paragraph.slide.field_node.yml
+++ b/config/sync/field.field.paragraph.slide.field_node.yml
@@ -26,7 +26,7 @@ bundle: slide
 label: 'Content item'
 description: 'Content item to link to'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
