--- a/config/sync/field.field.paragraph.slide.field_image.yml
+++ b/config/sync/field.field.paragraph.slide.field_image.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.paragraph.field_image
     - paragraphs.paragraphs_type.slide
   module:
+    - content_translation
     - custom_add_another
     - filefield_paths
     - image
@@ -30,6 +31,11 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 id: paragraph.slide.field_image
 field_name: field_image
 entity_type: paragraph
@@ -37,7 +43,7 @@ bundle: slide
 label: Image
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
