--- a/config/sync/core.entity_view_display.node.document.teaser.yml
+++ b/config/sync/core.entity_view_display.node.document.teaser.yml
@@ -15,10 +15,9 @@ dependencies:
     - node.type.document
   module:
     - ds
+    - file_entity
     - link
-    - responsive_image
-    - smart_trim
-    - taxonomy
+    - text
     - user
 third_party_settings:
   ds:
@@ -43,64 +42,22 @@ third_party_settings:
             attributes: ''
     regions:
       main:
-        - node_title
-        - field_document_type
-        - body
-        - langcode
-        - field_theme
         - field_document_file
+        - body
         - field_external_link
-        - field_ipu_structure
-        - field_media_image
-        - field_country
-        - links
-    fields:
-      node_title:
-        plugin_id: node_title
-        weight: 0
-        label: hidden
-        formatter: default
 id: node.document.teaser
 targetEntityType: node
 bundle: document
 mode: teaser
 content:
   body:
-    type: smart_trim
-    weight: 2
+    type: text_default
+    weight: 1
     region: main
     label: hidden
-    settings:
-      trim_length: 600
-      trim_type: chars
-      trim_suffix: ''
-      wrap_class: trimmed
-      more_text: More
-      more_class: more-link
-      summary_handler: full
-      trim_options:
-        text: true
-        trim_zero: false
-      wrap_output: false
-      more_link: false
+    settings: {  }
     third_party_settings:
       ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_country:
-    type: entity_reference_label
-    weight: 9
-    region: main
-    label: inline
-    settings:
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
         ft:
           id: default
           settings:
@@ -108,28 +65,13 @@ content:
             lb-col: false
             classes: {  }
   field_document_file:
-    type: entity_reference_entity_view
-    weight: 5
+    type: file_download_link
+    weight: 0
     region: main
     label: hidden
     settings:
-      view_mode: thumbnail
-      link: false
-    third_party_settings:
-      ds:
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_document_type:
-    type: entity_reference_label
-    weight: 1
-    region: main
-    label: hidden
-    settings:
-      link: false
+      access_message: 'You don''t have access to download this file.'
+      text: '[node:title]'
     third_party_settings:
       ds:
         ft:
@@ -139,8 +81,8 @@ content:
             lb-col: false
             classes: {  }
   field_external_link:
-    type: link_separate
-    weight: 6
+    type: link
+    weight: 2
     region: main
     label: hidden
     settings:
@@ -150,50 +92,11 @@ content:
       url_only: false
       url_plain: false
     third_party_settings: {  }
-  field_ipu_structure:
-    type: entity_reference_label
-    weight: 7
-    region: main
-    label: inline
-    settings:
-      link: false
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
-  field_media_image:
-    type: responsive_image
-    weight: 8
-    region: main
-    label: hidden
-    settings:
-      responsive_image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-  field_theme:
-    type: entity_reference_rss_category
-    weight: 4
-    region: main
-    label: inline
-    settings: {  }
-    third_party_settings: {  }
-  langcode:
-    type: language
-    weight: 3
-    region: main
-    label: inline
-    settings:
-      link_to_entity: false
-      native_language: false
-    third_party_settings: {  }
-  links:
-    weight: 10
-    region: main
-    settings: {  }
-    third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_country: true
+  field_document_type: true
+  field_ipu_structure: true
+  field_media_image: true
+  field_theme: true
+  langcode: true
+  links: true
