--- a/config/sync/ds.field.contextual_menu_event_navigation.yml
+++ b/config/sync/ds.field.contextual_menu_event_navigation.yml
@@ -10,11 +10,12 @@ properties:
     label: ''
     provider: menu_block
     label_display: visible
+    follow: 0
+    follow_parent: child
     level: 1
-    depth: 0
+    depth: 2
     expand: 0
     parent: 'mega-menu:menu_link_content:3310ff71-4264-4d76-818f-13e0826d43d1'
-    render_parent: true
     suggestion: mega_menu_events
 type: block
 type_label: 'Block field'
