--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: 1aedb61b-ccae-47db-b9e4-d50003d8639a
 name: 'Inter-Parliamentary Union'
-mail: rod@sereno.co.uk
+mail: peter@wearepotential.org
 slogan: 'For democracy. For everyone.'
 page:
   403: /
