--- a/config/sync/core.entity_view_display.node.publication.default.yml
+++ b/config/sync/core.entity_view_display.node.publication.default.yml
@@ -13,7 +13,7 @@ dependencies:
     - field.field.node.publication.field_publication_format
     - field.field.node.publication.field_publication_type
     - field.field.node.publication.field_theme
-    - image.style.large
+    - image.style.max_650x650
     - node.type.publication
   module:
     - datetime
@@ -21,7 +21,6 @@ dependencies:
     - entity_reference_revisions
     - field_group
     - image
-    - link
     - options
     - text
     - user
@@ -30,7 +29,7 @@ third_party_settings:
     group_download:
       children: {  }
       parent_name: ''
-      weight: 22
+      weight: 21
       label: 'Download free copy'
       format_settings:
         formatter: collapsible
@@ -47,56 +46,57 @@ third_party_settings:
         label_element_classes: ''
       format_type: html_element
       region: hidden
+    group_b:
+      children:
+        - body
+        - field_media_image
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        description: ''
+        id: ''
+        classes: publication-body-and-image
+        open: 0
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        effect: none
+        speed: fast
+        attributes: ''
+      label: 'Body and image'
+      region: hidden
   ds:
     layout:
-      id: bs_2col_stacked
-      library: null
+      id: ds_2col_stacked
+      library: ds/ds_2col_stacked
       disable_css: false
       entity_classes: all_classes
       settings:
-        layout:
-          wrapper: div
-          classes:
-            row: row
-          add_layout_class: 1
-          attributes: ''
-        regions:
-          top:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
-          left:
-            wrapper: div
-            classes:
-              col-sm-6: col-sm-6
-            add_region_classes: 1
-            attributes: ''
-          right:
-            wrapper: div
-            classes:
-              col-sm-6: col-sm-6
-            add_region_classes: 1
-            attributes: ''
-          bottom:
-            wrapper: div
-            classes:
-              col-sm-12: col-sm-12
-            add_region_classes: 1
-            attributes: ''
+        wrappers:
+          header: div
+          left: div
+          right: div
+          footer: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      left:
+      header:
         - node_title
-        - field_media_image
-        - field_publication_date
+      left:
+        - group_b
         - body
+        - field_media_image
       right:
+        - field_publication_date
         - field_publication_type
         - field_publication_document
         - field_publication_format
-        - langcode
-        - field_contact_ipu
     fields:
       node_title:
         plugin_id: node_title
@@ -104,7 +104,7 @@ third_party_settings:
         label: hidden
         formatter: default
         settings:
-          wrapper: h2
+          wrapper: h1
           class: ''
           link: false
         ft:
@@ -120,30 +120,18 @@ mode: default
 content:
   body:
     label: hidden
-    weight: 3
+    weight: 5
     type: text_default
     settings: {  }
     third_party_settings: {  }
     region: left
-  field_contact_ipu:
-    label: hidden
-    weight: 8
-    type: link
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    region: right
   field_media_image:
     type: image
-    weight: 1
+    weight: 6
     region: left
     label: hidden
     settings:
-      image_style: large
+      image_style: max_650x650
       image_link: ''
     third_party_settings:
       ds:
@@ -154,49 +142,64 @@ content:
             lb-col: false
             classes: {  }
   field_publication_date:
-    label: hidden
+    label: inline
     weight: 2
     type: datetime_default
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
-    region: left
+      format_type: html_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: right
   field_publication_document:
     type: entity_reference_revisions_entity_view
-    weight: 5
+    weight: 4
     region: right
     label: inline
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_publication_format:
     label: inline
-    weight: 6
+    weight: 5
     type: list_default
     settings: {  }
     third_party_settings: {  }
     region: right
   field_publication_type:
     type: entity_reference_label
-    weight: 4
+    weight: 3
     region: right
     label: inline
     settings:
       link: true
-    third_party_settings: {  }
-  langcode:
-    type: language
-    weight: 7
-    region: right
-    label: inline
-    settings:
-      link_to_entity: false
-      native_language: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
+  field_contact_ipu: true
   field_country: true
   field_ipu_structure: true
   field_theme: true
+  langcode: true
   links: true
