--- a/config/sync/core.entity_view_display.paragraph.publication_document.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.publication_document.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.publication_document.field_publication_language
     - paragraphs.paragraphs_type.publication_document
   module:
+    - ds
     - file_entity
     - options
 id: paragraph.publication_document.default
@@ -20,12 +21,19 @@ content:
     type: file_download_link
     settings:
       access_message: 'You don''t have access to download this file.'
-      text: 'Download [file:name]'
-    third_party_settings: {  }
+      text: 'Download publication [paragraph:field_publication_language]'
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   field_publication_language:
-    weight: 2
-    label: above
+    weight: 0
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
