--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -179,6 +179,7 @@ module:
   views_data_export: 0
   views_fieldsets: 0
   views_menu_children_filter: 0
+  views_selective_filters: 0
   views_ui: 0
   webform: 0
   webform_image_select: 0
