Update config so page title shows in the right place in page layout.

--- a/config/sync/block.block.ipu_mainmenu.yml
+++ b/config/sync/block.block.ipu_mainmenu.yml
@@ -19,10 +19,12 @@ settings:
   label: 'Sub menu'
   provider: menu_block
   label_display: '0'
+  follow: 0
+  follow_parent: child
   level: 1
   depth: 2
   expand: 1
   parent: 'main:'
-  render_parent: false
   suggestion: main
+  render_parent: false
 visibility: {  }
