--- a/config/sync/block.block.mainmenu.yml
+++ b/config/sync/block.block.mainmenu.yml
@@ -23,10 +23,12 @@ settings:
   label: 'Geo-political groups'
   provider: menu_block
   label_display: visible
+  follow: 0
+  follow_parent: child
   level: 1
   depth: 1
   expand: 0
   parent: 'main:menu_link_content:4757d068-316e-4037-9af9-5ab9185972d7'
-  render_parent: false
   suggestion: main
+  render_parent: false
 visibility: {  }
