--- a/config/sync/block.block.followus_2.yml
+++ b/config/sync/block.block.followus_2.yml
@@ -19,10 +19,12 @@ settings:
   label: Connect
   provider: menu_block
   label_display: visible
+  follow: 0
+  follow_parent: child
   level: 1
   depth: 1
   expand: 0
   parent: 'follow-us:'
-  render_parent: false
   suggestion: follow_us
+  render_parent: false
 visibility: {  }
