--- a/config/sync/block.block.megamenu_4.yml
+++ b/config/sync/block.block.megamenu_4.yml
@@ -19,10 +19,12 @@ settings:
   label: 'Our impact'
   provider: menu_block
   label_display: visible
+  follow: 0
+  follow_parent: child
   level: 1
   depth: 1
   expand: 0
   parent: 'mega-menu:menu_link_content:7deea3a9-0284-4575-91a7-04bc620a83c0'
-  render_parent: false
   suggestion: mega_menu
+  render_parent: false
 visibility: {  }
