--- a/config/sync/core.entity_view_display.taxonomy_term.theme.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.theme.default.yml
@@ -21,7 +21,7 @@ content:
     third_party_settings: {  }
   field_archive:
     weight: 1
-    label: above
+    label: inline
     settings:
       format: default
       format_custom_false: ''
