--- a/config/sync/views.view.publications.yml
+++ b/config/sync/views.view.publications.yml
@@ -641,6 +641,53 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
+        field_publication_type_target_id_selective:
+          id: field_publication_type_target_id_selective
+          table: node__field_publication_type
+          field: field_publication_type_target_id_selective
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Type
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: field_publication_type_target_id_selective
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              product_owner: '0'
+              web_editor: '0'
+              writer: '0'
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          selective_display_field: field_publication_type
+          selective_entity_type: taxonomy_term
+          selective_display_sort: ASC
+          selective_aggregated_fields: ''
+          selective_items_limit: '100'
+          plugin_id: views_selective_filters_filter
         field_theme_target_id_selective:
           id: field_theme_target_id_selective
           table: node__field_theme
