--- a/config/sync/core.entity_view_display.node.publication.highlight.yml
+++ b/config/sync/core.entity_view_display.node.publication.highlight.yml
@@ -46,7 +46,6 @@ third_party_settings:
       region: hidden
     group_content:
       children:
-        - field_publication_date
         - body
         - node_link
       parent_name: group_content_wrapper
@@ -66,6 +65,7 @@ third_party_settings:
       region: hidden
     group_header:
       children:
+        - field_publication_date
         - field_publication_type
         - node_title
       parent_name: ''
@@ -128,10 +128,10 @@ third_party_settings:
         - group_content_wrapper
         - field_media_image
         - group_content
-        - field_publication_type
-        - node_title
         - field_publication_date
+        - field_publication_type
         - body
+        - node_title
         - node_link
     fields:
       node_link:
@@ -141,7 +141,7 @@ third_party_settings:
         formatter: default
       node_title:
         plugin_id: node_title
-        weight: 14
+        weight: 16
         label: hidden
         formatter: default
         settings:
@@ -203,16 +203,23 @@ content:
             classes: {  }
   field_publication_date:
     label: hidden
-    weight: 15
+    weight: 14
     type: datetime_default
     settings:
-      format_type: medium
       timezone_override: ''
-    third_party_settings: {  }
+      format_type: html_year
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: main
   field_publication_type:
     type: entity_reference_label
-    weight: 13
+    weight: 15
     region: main
     label: hidden
     settings:
