--- a/config/sync/paragraphs.paragraphs_type.carousel_slides.yml
+++ b/config/sync/paragraphs.paragraphs_type.carousel_slides.yml
@@ -5,5 +5,5 @@ dependencies: {  }
 id: carousel_slides
 label: 'Carousel slides'
 icon_uuid: null
-description: ''
+description: 'Carousel with bespoke slides, containing title and image.'
 behavior_plugins: {  }
