--- a/config/sync/core.entity_form_display.node.ipu_event.default.yml
+++ b/config/sync/core.entity_form_display.node.ipu_event.default.yml
@@ -297,7 +297,7 @@ content:
       edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ipu_event_session_type
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_ipu_event_sessions:
