Make sure theme and event type field entity references are not translatable.

--- a/config/sync/field.field.node.ipu_event.field_event_theme.yml
+++ b/config/sync/field.field.node.ipu_event.field_event_theme.yml
@@ -19,7 +19,7 @@ bundle: ipu_event
 label: Theme
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
